Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -269,3 +269,32 @@ START-OF-SELECTION.
     cl_demo_output=>display( gt_flight ).
   ENDIF.
 ```
+</br>
+</br>
+
+### 실습 2
+```abap
+PARAMETERS: pa_car TYPE S_CARR_ID.
+DATA: gt_data TYPE BC400_T_CONNECTIONS.
+
+AT SELECTION-SCREEN.
+  IF pa_car IS INITIAL.
+    MESSAGE 'pa_car가 입력되지 않았습니다.' TYPE 'E'.
+  ENDIF.
+
+START-OF-SELECTION.
+  CALL FUNCTION 'ZGET_CONNECT03'
+    EXPORTING
+      iv_carrid = pa_car
+    IMPORTING
+      ET_CONNECT = gt_data
+    EXCEPTIONS
+      NO_DATA   = 1
+      OTHERS    = 2.
+
+  IF sy-subrc <> 0.
+    MESSAGE 'No Data error!' TYPE 'E'.
+  ELSE.
+    cl_demo_output=>display( gt_data ).
+  ENDIF.
+```
