Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -168,8 +168,6 @@ START-OF-SELECTION.
 ---
 
 </br>
-
-
 </br>
 
 ## < ABAP 추가 문법 >
@@ -216,6 +214,24 @@ IF sy-subrc = 0.
 ENDIF.
 ```
 
+</br>
+</br>
+
+---
+
+</br>
+
+### Secondary Index
+- 기본 키(primary key) 외에 추가로 만드는 검색용 인덱스
+- 특정 필드 조합으로 데이터를 더 빠르게 찾기 위해 사용
+- WHERE 조건에 인덱스 필드가 포함되면 → DB 검색 속도 향상
+</br>
+
+### Table Buffer (테이블 버퍼링)
+- 자주 사용하는 테이블 데이터를 DB에서 읽지 않고 메모리(Buffer) 에 저장해두고 읽는 방식
+- 버퍼에 있으면 DB 접근 없이 바로 조회 → 조회 속도 매우 빠름
+- 읽기 중심 테이블에 적합, 변경이 잦은 테이블에는 비권장
+- 테이블마다 `버퍼링 허용 여부`를 SAP Dictionary(SE11)에서 설정
 </br>
 </br>
 
