Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -221,6 +221,9 @@ ENDIF.
 
 </br>
 
+## < ABAP 개념 >
+</br>
+
 ### Secondary Index
 - 기본 키(primary key) 외에 추가로 만드는 검색용 인덱스
 - 특정 필드 조합으로 데이터를 더 빠르게 찾기 위해 사용
