Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -77,49 +77,6 @@ SELECT C~CARRID F~CONNID F~FLDATE
 
 </br>
 
-## < AUTHORITY-CHECK (SU21) >
-</br>
-
-- 사용자가 특정 권한을 가지고 있는지 확인하는 ABAP 구문
-- Role 부여: 특정 사용자에게 역할(Role)을 부여하면 해당 권한 획득
-- 권한 객체(Object) + 필드(ID) + 액티비티(ACTVT) 기반으로 체크
-- ACTVT(Activity): 수행 가능한 작업 지정
-  - `01` = Create
-  - `02` = Change
-  - `03` = Display
-- AUTHORITY-CHECK: ABAP에서 사용자 권한을 확인하는 구문
-  - 성공 여부는 sy-subrc로 판단 (0 = 권한 있음, <>0 = 권한 없음)
-```abap
-AUTHORITY-CHECK OBJECT '<권한객체>'
-  ID '<필드1>' FIELD <값1>
-  ID '<필드2>' FIELD <값2>
-  ...
-IF sy-subrc = 0.
-  " 권한 있음 처리
-ELSE.
-  " 권한 없음 처리
-ENDIF.
-```
-```abap
-AUTHORITY-CHECK OBJECT 'S_CARRID'
-  ID 'CARRID' FIELD iv_carrid
-  ID 'ACTVT' FIELD '03'.  " Display 권한 체크
-
-IF sy-subrc = 0.
-  " 권한 있음 → 데이터 조회
-  SELECT * FROM spfli WHERE carrid = iv_carrid.
-ELSE.
-  " 권한 없음 → 메시지 처리
-  MESSAGE '권한이 없습니다.' TYPE 'E'.
-ENDIF.
-```
-</br>
-</br>
-
----
-
-</br>
-
 ## < ABAP EVENT >
 - 프로그램 실행 시점에 자동 호출되는 코드 블록
 - 주요 이벤트
@@ -213,7 +170,43 @@ IF sy-subrc = 0.
   cl_demo_output=>display( lt_scarr ).
 ENDIF.
 ```
+</br>
+</br>
 
+**3) AUTHORITY-CHECK (SU21)**
+- 사용자가 특정 권한을 가지고 있는지 확인하는 ABAP 구문
+- Role 부여: 특정 사용자에게 역할(Role)을 부여하면 해당 권한 획득
+- 권한 객체(Object) + 필드(ID) + 액티비티(ACTVT) 기반으로 체크
+- ACTVT(Activity): 수행 가능한 작업 지정
+  - `01` = Create
+  - `02` = Change
+  - `03` = Display
+- AUTHORITY-CHECK: ABAP에서 사용자 권한을 확인하는 구문
+  - 성공 여부는 sy-subrc로 판단 (0 = 권한 있음, <>0 = 권한 없음)
+```abap
+AUTHORITY-CHECK OBJECT '<권한객체>'
+  ID '<필드1>' FIELD <값1>
+  ID '<필드2>' FIELD <값2>
+  ...
+IF sy-subrc = 0.
+  " 권한 있음 처리
+ELSE.
+  " 권한 없음 처리
+ENDIF.
+```
+```abap
+AUTHORITY-CHECK OBJECT 'S_CARRID'
+  ID 'CARRID' FIELD iv_carrid
+  ID 'ACTVT' FIELD '03'.  " Display 권한 체크
+
+IF sy-subrc = 0.
+  " 권한 있음 → 데이터 조회
+  SELECT * FROM spfli WHERE carrid = iv_carrid.
+ELSE.
+  " 권한 없음 → 메시지 처리
+  MESSAGE '권한이 없습니다.' TYPE 'E'.
+ENDIF.
+```
 </br>
 </br>
 
