Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -288,6 +288,8 @@ START-OF-SELECTION.
 ```abap
 PARAMETERS: pa_car TYPE S_CARR_ID.
 DATA: gt_data TYPE BC400_T_CONNECTIONS.
+" TABLE OF로 가져오고 싶으면 KEY 설정 맞추기
+" DATA: gt_data TYPE STANDARD TABLE OF BC400_S_CONNECTION WITH NON-UNIQUE KEY CARRID CONNID. 
 
 AT SELECTION-SCREEN.
   IF pa_car IS INITIAL.
