Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -229,6 +229,15 @@ ENDIF.
 - 읽기 중심 테이블에 적합, 변경이 잦은 테이블에는 비권장
 - 테이블마다 `버퍼링 허용 여부`를 SAP Dictionary(SE11)에서 설정
 </br>
+
+### DB & 내부 테이블 연산 정리
+- **INSERT** : 값 없을 때 새로 추가
+- **UPDATE** : 값 있을 때 갱신
+- **DELETE** : 값 삭제
+- **MODIFY (DB)** : 값 있으면 UPDATE, 없으면 INSERT
+- **MODIFY (ITAB)** : 조건에 맞는 행만 갱신, 값 없으면 추가되지 않음
+
+</br>
 </br>
 
 ---
