Update 프로그래핑 문법과 로직 (11.26).md'

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -125,6 +125,25 @@ START-OF-SELECTION.
 ---
 
 </br>
+
+## < Class 클래스 (SE24) >
+- `Class` : 객체를 만들기 위한 틀. 속성과 기능을 정의.
+- 객체(인스턴스): 클래스에서 만들어진 실제 존재하는 개별 데이터 단위
+- 클래스 구성
+  - 속성(Attributes): 객체 상태 정보
+  - 메서드(Methods): 객체가 수행하는 기능
+- 접근 제한자
+  - `public` : 외부에서 접근 가능
+  - `private` : 외부에서 접근 불가
+- 객체 특징
+  - 각 객체는 독립적인 메모리 보유 → 속성/메서드 상태가 객체마다 다름 (`instance component`)
+  - 모든 객체가 공통으로 접근하는 속성/메서드 → `static component`
+
+</br>
+</br>
+
+---
+
 </br>
 
 ## < ABAP 추가 문법 >
