Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -127,7 +127,7 @@ START-OF-SELECTION.
 </br>
 
 ## < Class 클래스 (SE24) >
-- `Class` : 객체를 만들기 위한 틀. 속성과 기능을 정의.
+- 객체를 만들기 위한 틀. 속성과 기능을 정의.
 - 객체(인스턴스): 클래스에서 만들어진 실제 존재하는 개별 데이터 단위
 - 클래스 구성
   - 속성(Attributes): 객체 상태 정보
