Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -138,7 +138,31 @@ START-OF-SELECTION.
 - 객체 특징
   - 각 객체는 독립적인 메모리 보유 → 속성/메서드 상태가 객체마다 다름 (`instance component`)
   - 모든 객체가 공통으로 접근하는 속성/메서드 → `static component`
+```abap
+CLASS <클래스명> DEFINITION.
+  PUBLIC SECTION.
+    "객체별 속성(Attributes)
+    DATA: <속성1> TYPE <타입>,
+          <속성2> TYPE <타입>.
 
+    "객체별 기능(Methods)
+    METHODS: <메서드명>.
+
+    "모든 객체가 공통으로 쓰는 속성/메서드 (Static)
+    CLASS-DATA: <static속성> TYPE <타입> VALUE <초기값>.
+
+  PRIVATE SECTION.
+    "외부 접근 불가 속성/메서드
+    DATA: <속성명> TYPE <타입>.
+    METHODS: <메서드명>.
+ENDCLASS.
+
+CLASS <클래스명> IMPLEMENTATION.
+  METHOD <메서드명>.
+    "메서드 내용
+  ENDMETHOD.
+ENDCLASS.
+```
 </br>
 </br>
 
