Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -70,6 +70,36 @@ SELECT C~CARRID F~CONNID F~FLDATE
     cl_demo_output=>display( gt_data ).
   ENDIF.
 ```
+```abap
+CLASS zcl_car DEFINITION.
+  PUBLIC SECTION.
+    DATA: color TYPE string,    "각 자동차 색상
+          speed TYPE i.         "각 자동차 속도
+    METHODS: show_info.         "정보 출력
+    CLASS-DATA: total_cars TYPE i VALUE 0.  "모든 자동차 공통
+ENDCLASS.
+
+CLASS zcl_car IMPLEMENTATION.
+  METHOD show_info.
+    WRITE: / '자동차 색상:', color, '속도:', speed.
+  ENDMETHOD.
+ENDCLASS.
+
+"객체 생성
+DATA(car1) = NEW zcl_car( ).
+DATA(car2) = NEW zcl_car( ).
+
+car1->color = 'Red'. car1->speed = 100.
+car2->color = 'Blue'. car2->speed = 120.
+
+"메서드 호출
+car1->show_info( ).
+car2->show_info( ).
+
+"static 속성 사용
+zcl_car=>total_cars = 2.
+WRITE: / '총 자동차 수:', zcl_car=>total_cars.
+```
 </br>
 </br>
 
