Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -367,6 +367,7 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 2
+- Event 함수, Function Module 실습
 ```abap
 PARAMETERS: pa_car TYPE S_CARR_ID.
 DATA: gt_data TYPE BC400_T_CONNECTIONS.
@@ -394,3 +395,7 @@ START-OF-SELECTION.
     cl_demo_output=>display( gt_data ).
   ENDIF.
 ```
+</br>
+</br>
+
+### 실습 3
