Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -327,7 +327,7 @@ SELECT * FROM spfli WHERE carrid IN so_car.
 ```
 </br>
 
-### ITAB 필드 정의
+### SELECT-OPTIONS 필드 정의
 
 | 필드명 | 의미 |
 |--------|------|
