--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -283,6 +283,26 @@ ENDIF.
 </br>
 </br>
 
+**4) SELECT-OPTIONS + APPEND/CLEAR**
+- SELECT-OPTIONS: 화면에서 범위 조건 입력용, 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
+- Select-options는 Header Line 있는 itab 이므로 APPEND 시 TO 절 생략 가능
+- `APPEND` : 조건을 내부 테이블에 추가
+- `CLEAR` : 헤더라인 초기화 → 다음 조건 입력 준비
+```abap
+" 1. SELECT-OPTIONS 선언
+SELECT-OPTIONS: <so_name> FOR <field>.
+
+" 2. 헤더라인 변수에 값 설정 후 APPEND
+<so_name>-SIGN   = '<Include / Exclude>';   " 예: 'I' 또는 'E'
+<so_name>-OPTION = '<연산자>';            " 예: 'EQ', 'BT', 'GE' 등
+<so_name>-LOW    = '<시작값>';            " 범위 시작값
+<so_name>-HIGH   = '<끝값>';              " 범위 끝값 (BT일 경우)
+APPEND <so_name>.                           " 내부 테이블에 적용
+CLEAR <so_name>.                            " 헤더라인 초기화 후 다음 조건 설정
+```
+</br>
+</br>
+
 ---
 
 </br>
@@ -343,7 +363,7 @@ INITIALIZATION.
 
   so_con-SIGN = 'E'.
   so_con-OPTION = 'EQ'.
-  so_con-LOW = '0400'.
+  so_con-LOW = '0400'.      " 0401, 0402만 조회
   APPEND so_con.
   CLEAR so_con.
 
