--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -300,6 +300,44 @@ SELECT-OPTIONS: <so_name> FOR <field>.
 APPEND <so_name>.                           " 내부 테이블에 적용
 CLEAR <so_name>.                            " 헤더라인 초기화 후 다음 조건 설정
 ```
+```abap
+REPORT z_example_so_append.
+
+DATA: gt_flight TYPE TABLE OF sflight.
+
+" SELECT-OPTIONS 선언
+SELECT-OPTIONS: so_conn FOR sflight-connid.
+
+INITIALIZATION.
+  " 포함 조건: 0400
+  so_conn-SIGN   = 'I'.
+  so_conn-OPTION = 'EQ'.
+  so_conn-LOW    = '0400'.
+  APPEND so_conn.
+  CLEAR so_conn.
+
+  " 제외 조건: 0401
+  so_conn-SIGN   = 'E'.
+  so_conn-OPTION = 'EQ'.
+  so_conn-LOW    = '0401'.
+  APPEND so_conn.
+  CLEAR so_conn.
+
+START-OF-SELECTION.
+  " 조건 적용 SELECT
+  SELECT *
+    FROM sflight
+    INTO TABLE gt_flight
+    WHERE connid IN so_conn.
+
+  cl_demo_output=>display( gt_flight ).      " 결과 : CONNID = 0400 만
+```
+</br>
+</br>
+
+**4) SELECT-OPTIONS + APPEND/CLEAR**
+```abap
+```
 </br>
 </br>
 
@@ -419,3 +457,91 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 3
+- class 코드
+```abap
+METHOD get_power.
+  DATA lv_power TYPE bc400_compute_power.
+
+*Simple error handling
+  IF iv_power >= 5 OR iv_power <= 0.
+    ev_result = 0.
+    RAISE EXCEPTION TYPE cx_bc400_power_too_high.
+*Calculate result
+  ELSEIF iv_power = 1.
+    ev_result = iv_base.
+  ELSE.
+    TRY.
+        ev_result = iv_base * iv_base.
+        lv_power = iv_power - 1.
+
+        WHILE sy-index < lv_power .
+          ev_result =  ev_result * iv_base.
+        ENDWHILE.
+      CATCH cx_sy_arithmetic_overflow.
+        ev_result = 0.
+        RAISE EXCEPTION TYPE cx_bc400_result_too_high.
+    ENDTRY.
+  ENDIF.
+ENDMETHOD.
+```
+- progam 코드
+```abap
+TYPES tv_result TYPE P LENGTH 16 DECIMALS 2.
+
+PARAMETERS: pa_int1 TYPE I,
+            pa_int2 TYPE I.
+
+DATA: gv_result TYPE tv_result.
+
+TRY.
+CALL METHOD cl_bc400_compute=>get_power
+  EXPORTING
+    iv_base  = pa_int1
+    iv_power = pa_int2
+  IMPORTING
+   ev_result = gv_result
+  .
+  CATCH cx_bc400_power_too_high.
+    MESSAGE 'Power too high!!' TYPE 'E'.
+  CATCH cx_bc400_result_too_high.
+    MESSAGE 'Result too high!!' TYPE 'E.'.
+ENDTRY.
+
+WRITE:/ gv_result.
+```
+</br>
+</br>
+
+### 실습 4
+- class 실습
+```abap
+PARAMETERS: CARRID TYPE S_CARR_ID,
+            CONNID TYPE S_CONN_ID.
+DATA: gt_data TYPE BC400_T_FLIGHTS.
+
+INITIALIZATION.
+  CARRID = 'AA'.
+  CONNID = '0017'.
+
+AT SELECTION-SCREEN.
+  IF ( CARRID IS INITIAL OR CONNID IS INITIAL ).
+    MESSAGE 'CARRID 나 CONNID 가 빈 값입니다.' TYPE 'E'.
+  ENDIF.
+
+START-OF-SELECTION.
+  TRY.
+  CALL METHOD cl_bc400_flightmodel=>get_flights
+    EXPORTING
+      iv_carrid = CARRID
+      iv_connid = CONNID
+    IMPORTING
+     et_flights = gt_data.
+
+    CATCH cx_bc400_no_data.
+      MESSAGE 'ERROR ! : No Data for Selection' TYPE 'E'.
+    CATCH cx_bc400_no_auth.
+      MESSAGE 'EEROR ! : No Authorization for Airline' TYPE 'E'.
+  ENDTRY.
+
+  cl_demo_output=>display( gt_data ).
+```
