Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -457,7 +457,7 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 3
-- class 코드
+- class/method 코드
 ```abap
 METHOD get_power.
   DATA lv_power TYPE bc400_compute_power.
@@ -513,7 +513,7 @@ WRITE:/ gv_result.
 </br>
 
 ### 실습 4
-- class 실습
+- class(method 가져오기) 실습
 ```abap
 PARAMETERS: CARRID TYPE S_CARR_ID,
             CONNID TYPE S_CONN_ID.
