Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -138,60 +138,45 @@ START-OF-SELECTION.
 - 객체 특징
   - 각 객체는 독립적인 메모리 보유 → 속성/메서드 상태가 객체마다 다름 (`instance component`)
   - 모든 객체가 공통으로 접근하는 속성/메서드 → `static component`
+- **Method 코드 형식**
 ```abap
-CLASS <클래스명> DEFINITION.
-  PUBLIC SECTION.
-    "객체별 속성(Attributes)
-    DATA: <속성1> TYPE <타입>,
-          <속성2> TYPE <타입>.
+METHOD <method_name>.
+  " 로컬 변수 선언
+  DATA <var_name> TYPE <type>.
 
-    "객체별 기능(Methods)
-    METHODS: <메서드명>.
+  " 파라미터 체크 / 조건 처리
+  IF <조건>.
+    <출력 변수> = <값>.
+    RAISE EXCEPTION TYPE <exception_type>.
+  ELSE.
+    " 계산 / 반복 / TRY-CATCH 가능
+    TRY.
+        <연산 로직>
+      CATCH <exception_type>.
+        <출력 변수> = <값>.
+        RAISE EXCEPTION TYPE <exception_type>.
+    ENDTRY.
+  ENDIF.
 
-    "모든 객체가 공통으로 쓰는 속성/메서드 (Static)
-    CLASS-DATA: <static속성> TYPE <타입> VALUE <초기값>.
-
-  PRIVATE SECTION.
-    "외부 접근 불가 속성/메서드
-    DATA: <속성명> TYPE <타입>.
-    METHODS: <메서드명>.
-ENDCLASS.
-
-CLASS <클래스명> IMPLEMENTATION.
-  METHOD <메서드명>.
-    "메서드 내용
-  ENDMETHOD.
-ENDCLASS.
+ENDMETHOD.
 ```
+- Program에서 Method 호출 형식
 ```abap
-CLASS zcl_car DEFINITION.
-  PUBLIC SECTION.
-    DATA: color TYPE string,    "각 자동차 색상
-          speed TYPE i.         "각 자동차 속도
-    METHODS: show_info.         "정보 출력
-    CLASS-DATA: total_cars TYPE i VALUE 0.  "모든 자동차 공통
-ENDCLASS.
+DATA gv_result TYPE <type>.
 
-CLASS zcl_car IMPLEMENTATION.
-  METHOD show_info.
-    WRITE: / '자동차 색상:', color, '속도:', speed.
-  ENDMETHOD.
-ENDCLASS.
+TRY.
+    CALL METHOD <class_name>=><method_name>
+      EXPORTING
+        iv_param1 = <값>
+        iv_param2 = <값>
+      IMPORTING
+        ev_result = gv_result
+      .
+  CATCH <exception_type>.
+    " 예외 처리
+ENDTRY.
 
-"객체 생성
-DATA(car1) = NEW zcl_car( ).
-DATA(car2) = NEW zcl_car( ).
-
-car1->color = 'Red'. car1->speed = 100.
-car2->color = 'Blue'. car2->speed = 120.
-
-"메서드 호출
-car1->show_info( ).
-car2->show_info( ).
-
-"static 속성 사용
-zcl_car=>total_cars = 2.
-WRITE: / '총 자동차 수:', zcl_car=>total_cars.
+WRITE: / gv_result.
 ```
 </br>
 </br>
