Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -26,8 +26,8 @@ SELECT carrid connid carrname
 - `RIGHT OUTER JOIN` : 오른쪽 테이블 기준, 왼쪽 테이블 없으면 NULL 포함
 </br>
 
-- `-` : 내부 테이블(워크 에어리어) 또는 구조 필드 접근용
-- `~` : DB 테이블이나 뷰 필드 접근용 (SELECT, JOIN, WHERE 등)
+- `-` : 필드 접근용 (JOIN 에서만 안씀)
+- `~` : JOIN 사용 시에만 사용
 ```abap
 SELECT <테이블1~필드>, <테이블2~필드>
   INTO TABLE <내테이블>
