Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -454,7 +454,7 @@ SELECT *
   FROM SFLIGHT
   ORDER BY SEATSMAX DESCENDING.
 * ORDER BY PRIMARY KEY.
-* ORDER BY carrid DESCENDING connid ASCENDING
+* ORDER BY carrid DESCENDING, connid ASCENDING
 
 IF sy-subrc = 0.
   cl_demo_output=>display( gt_sflight ).
