Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -1,1 +1,15 @@
+## < 실습 코드 >
+### 실습 1
+- 특정 필드에 대해 중복제거 및 정렬하여 조회하기
+```abap
+DATA: gs_data TYPE SFLIGHT,
+      gt_data LIKE TABLE OF gs_data.
 
+SELECT DISTINCT CARRID, CONNID, CURRENCY FROM SFLIGHT
+  INTO CORRESPONDING FIELDS OF TABLE @gt_data
+  ORDER BY CARRID DESCENDING, CONNID ASCENDING.
+
+LOOP AT gt_data INTO gs_data.
+  WRITE: / gs_data-CARRID, gs_data-CONNID, gs_data-CURRENCY.
+ENDLOOP.
+```
