--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -1,3 +1,19 @@
+## < Data Dictionary: Domain & Data Element >
+### Domain (도메인)
+- 데이터의 타입과 속성을 정의하는 단위
+  - 데이터 형식, 길이, 소수점, 문자/숫자 구분 등 속성을 정의
+- 숫자 음수 사용 여부 지정 가능 → `Sign` 속성 체크 시 음수 입력 허용
+- 소문자 사용 여부 지정 가능 → `Case` 속성 체크 시 소문자 입력 가능
+  
+<img width="492" height="328" alt="image" src="https://github.com/user-attachments/assets/dfebe42f-4966-4074-84fd-366c8a833528" />
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 ### 실습 1
 - 특정 필드에 대해 중복제거 및 정렬하여 조회하기
