--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -1,4 +1,8 @@
 ## < Data Dictionary: Domain & Data Element >
+- Domain과 Data Element는 `1 : N` 관계
+- 1개의 Domain → 여러 Data Element에서 사용 가능
+</br>
+
 ### Domain (도메인)
 - 데이터의 타입과 속성을 정의하는 단위
   - 데이터 형식, 길이, 소수점, 문자/숫자 구분 등 속성을 정의
@@ -6,6 +10,15 @@
 - 소문자 사용 여부 지정 가능 → `Case` 속성 체크 시 소문자 입력 가능
   
 <img width="492" height="328" alt="image" src="https://github.com/user-attachments/assets/dfebe42f-4966-4074-84fd-366c8a833528" />
+
+</br>
+</br>
+
+### Data Element (데이터 요소)
+- 실제 테이블 필드나 구조 필드에 사용되는 논리적 이름
+- Domain 기반 생성 → Domain에서 정의된 형식을 그대로 사용
+- 도메인 1개를 여러 Data Element에서 재사용 가능
+- Data Element는 레이블, 설명, 검색 도움말 등 사용자 관점 속성 추가 가능
 
 </br>
 </br>
