Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -17,8 +17,21 @@
 ### Data Element (데이터 요소)
 - 실제 테이블 필드나 구조 필드에 사용되는 논리적 이름
 - Domain 기반 생성 → Domain에서 정의된 형식을 그대로 사용
+- Domain 선택은 선택 사항
+  - Domain 사용 시: 타입, 길이, 음수 허용 여부, 소문자 허용 여부 등 속성을 한번에 관리 가능
+    - Domain 속성을 수정하면 해당 Domain을 참조하는 모든 Data Element가 자동으로 변경
+  - Domain 미사용 시: Built-in Type으로 직접 타입 지정 가능
+ 
+  <img width="495" height="269" alt="image" src="https://github.com/user-attachments/assets/c08d9ecd-3061-46e5-be91-a867f812b2a1" />
+
 - 도메인 1개를 여러 Data Element에서 재사용 가능
 - Data Element는 레이블, 설명, 검색 도움말 등 사용자 관점 속성 추가 가능
+
+
+</br>
+
+
+<img width="495" height="269" alt="image" src="https://github.com/user-attachments/assets/abb423ba-3983-4a1d-ad33-ab0b7cb7a437" />
 
 </br>
 </br>
