Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -24,6 +24,14 @@
 - 도메인 1개를 여러 Data Element에서 재사용 가능
 
 <img width="495" height="269" alt="image" src="https://github.com/user-attachments/assets/abb423ba-3983-4a1d-ad33-ab0b7cb7a437" />
+</br>
+</br>
+</br>
+
+
+<img width="491" height="166" alt="image" src="https://github.com/user-attachments/assets/543260b8-6384-469e-a105-b218af963d6e" />
+
+
 
 </br>
 </br>
