Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -30,7 +30,7 @@
 </br>
 </br>
 
-- `text Element -> Selelction Texts -> DDIC Reference` 하면 short description 뜸
+- **`text Element -> Selelction Texts -> DDIC Reference` 하면 short description 뜸**
 <img width="491" height="166" alt="image" src="https://github.com/user-attachments/assets/543260b8-6384-469e-a105-b218af963d6e" />
 
 </br>
