Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -1,6 +1,9 @@
 ## < Data Dictionary: Domain & Data Element >
 - Domain과 Data Element는 `1 : N` 관계
 - 1개의 Domain → 여러 Data Element에서 사용 가능
+
+<img width="481" height="223" alt="image" src="https://github.com/user-attachments/assets/afa77f30-2106-4dc1-8747-c54c47fe0019" />
+
 </br>
 
 ### Domain (도메인)
