Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -61,3 +61,11 @@ LOOP AT gt_data INTO gs_data.
   WRITE: / gs_data-CARRID, gs_data-CONNID, gs_data-CURRENCY.
 ENDLOOP.
 ```
+</br>
+</br>
+
+### 실습 2
+- domain과 data element 실습
+**1) domain 정의**
+
+<img width="328" height="272" alt="image" src="https://github.com/user-attachments/assets/4a1d0680-2f2d-4c0f-92ce-4a0b3cfe5b44" />
