Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -70,3 +70,26 @@ ENDLOOP.
 **1) domain 정의**
 
 <img width="328" height="272" alt="image" src="https://github.com/user-attachments/assets/4a1d0680-2f2d-4c0f-92ce-4a0b3cfe5b44" />
+</br>
+
+**2) data element 정의**
+
+<img width="457" height="270" alt="image" src="https://github.com/user-attachments/assets/6f183cf8-29d2-4be0-a69f-a1beaaecbce3" />
+</br>
+
+**3) program 코드**
+```abap
+PARAMETERS: pa_fname TYPE ZFIRSTNAME03,
+            pa_lname TYPE ZLASTNAME03,
+            pa_activ TYPE ZASSETS03,
+            pa_liabs TYPE ZLIABILITIES03.
+DATA: gv_result TYPE P LENGTH 10 DECIMALS 2.
+
+
+gv_result = pa_activ - pa_liabs.
+WRITE:/ 'FIrst Name: ', pa_fname,
+      / 'Last Name: ', pa_lname,
+      / 'Assets: ', pa_activ,
+      / 'Liabilities: ', pa_liabs,
+      / 'Assets - Liabilities : ', gv_result.
+```
