--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -46,6 +46,23 @@
 
 </br>
 
+## Structure Types (스트럭처 타입)
+**1) Simple Structure (단순 구조)**
+- 일반적으로 사용하는 기본 스트럭처
+- 필드 안에 또 다른 구조나 테이블이 없는 구조
+**2) Nested Structure (중첩 구조)**
+- 어떤 필드 안에 또 다른 스트럭처가 포함된 구조
+- 구조 안에 구조를 넣어 계층적으로 데이터 표현 가능
+**3) Deep Structure (딥 구조)**
+- 어떤 필드 안에 인터널 테이블 형태의 테이블 타입이 들어간 구조
+- 구조 안에 테이블을 넣어 1:N 관계 데이터를 표현 가능
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 ### 실습 1
 - 특정 필드에 대해 중복제거 및 정렬하여 조회하기
