Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -50,12 +50,47 @@
 **1) Simple Structure (단순 구조)**
 - 일반적으로 사용하는 기본 스트럭처
 - 필드 안에 또 다른 구조나 테이블이 없는 구조
+```abap
+TYPES: BEGIN OF ty_simple,
+         name TYPE string,
+         age  TYPE i,
+       END OF ty_simple.
+```
+</br>
+
 **2) Nested Structure (중첩 구조)**
 - 어떤 필드 안에 또 다른 스트럭처가 포함된 구조
 - 구조 안에 구조를 넣어 계층적으로 데이터 표현 가능
+```abap
+TYPES: BEGIN OF ty_address,
+         city    TYPE string,
+         zipcode TYPE string,
+       END OF ty_address.
+
+TYPES: BEGIN OF ty_person,
+         name    TYPE string,
+         age     TYPE i,
+         address TYPE ty_address, "스트럭처 안 스트럭처
+       END OF ty_person.
+```
+</br>
+
 **3) Deep Structure (딥 구조)**
 - 어떤 필드 안에 인터널 테이블 형태의 테이블 타입이 들어간 구조
 - 구조 안에 테이블을 넣어 1:N 관계 데이터를 표현 가능
+```abap
+TYPES: BEGIN OF ty_order_item,
+         item_id TYPE i,
+         qty     TYPE i,
+       END OF ty_order_item.
+
+TYPES: ty_order_items TYPE STANDARD TABLE OF ty_order_item WITH DEFAULT KEY.
+
+TYPES: BEGIN OF ty_order,
+         order_id TYPE i,
+         items    TYPE ty_order_items, "스트럭처 안 테이블
+       END OF ty_order.
+```
 </br>
 </br>
 
