--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -46,7 +46,7 @@
 
 </br>
 
-## Structure Types (스트럭처 타입)
+## < Structure Types (스트럭처 타입) >
 **1) Simple Structure (단순 구조)**
 - 일반적으로 사용하는 기본 스트럭처
 - 필드 안에 또 다른 구조나 테이블이 없는 구조
@@ -58,6 +58,8 @@ TYPES: BEGIN OF ty_simple,
 ```
 </br>
 </br>
+</br>
+
 
 **2) Nested Structure (중첩 구조)**
 - 어떤 필드 안에 또 다른 스트럭처가 포함된 구조
@@ -76,6 +78,8 @@ TYPES: BEGIN OF ty_person,
 ```
 </br>
 </br>
+</br>
+
 
 **3) Deep Structure (딥 구조)**
 - 어떤 필드 안에 인터널 테이블 형태의 테이블 타입이 들어간 구조
@@ -95,6 +99,8 @@ TYPES: BEGIN OF ty_order,
 ```
 </br>
 </br>
+</br>
+
 
 ---
 
