Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -100,7 +100,50 @@ TYPES: BEGIN OF ty_order,
 </br>
 </br>
 </br>
+</br>
 
+## < Structure와 INCLUDE 접근 방식 >
+### 1) `.INCLUDE` 사용
+- 스트럭처 안에 INCLUDE로 다른 구조체를 포함했을 때
+- INCLUDE 안의 필드는 최상위 구조체 필드처럼 바로 접근 가능
+```abap
+TYPES: BEGIN OF ty_addr,
+         street TYPE string,
+         city   TYPE string,
+       END OF ty_addr.
+
+TYPES: BEGIN OF ty_person,
+         name TYPE string,
+         INCLUDE TYPE ty_addr, "포함
+       END OF ty_person.
+
+DATA person TYPE ty_person.
+
+"접근
+person-street = 'Main Street'.
+person-city   = 'Seoul'.
+```
+</br>
+</br>
+</br>
+
+### 2) 구조체 필드 이름으로 직접 포함(예: addr)
+- 구조체 안에 필드명으로 다른 구조체를 선언했을 때
+- 접근할 때는 상위 구조체 → 필드 → 하위 필드 형태로 접근
+```abap
+TYPES: BEGIN OF ty_person,
+         name TYPE string,
+         addr TYPE ty_addr,  "필드명으로 포함
+       END OF ty_person.
+
+DATA person TYPE ty_person.
+
+"접근
+person-addr-street = 'Main Street'.
+person-addr-city   = 'Seoul'.
+```
+</br>
+</br>
 
 ---
 
