Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -1,4 +1,4 @@
-## < Data Dictionary: Domain & Data Element >
+# < Data Dictionary: Domain & Data Element >
 - Domain과 Data Element는 `1 : N` 관계
 - 1개의 Domain → 여러 Data Element에서 사용 가능
 </br>
