Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -103,6 +103,9 @@ TYPES: BEGIN OF ty_order,
 </br>
 
 ## < Structure와 INCLUDE 접근 방식 >
+
+<img width="508" height="198" alt="image" src="https://github.com/user-attachments/assets/4686de91-e543-43d7-9c2f-78271a78a0a7" />
+
 ### 1) `.INCLUDE` 사용
 - 스트럭처 안에 INCLUDE로 다른 구조체를 포함했을 때
 - INCLUDE 안의 필드는 최상위 구조체 필드처럼 바로 접근 가능
