Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -201,3 +201,21 @@ WRITE:/ 'FIrst Name: ', pa_fname,
       / 'Liabilities: ', pa_liabs,
       / 'Assets - Liabilities : ', gv_result.
 ```
+</br>
+</br>
+
+### 실습 2
+- 스트럭처 ZSSCARR_B03을 스트럭처 ZSSPFLI_B03 안에 포함시키기
+**1) ZSSCARR_B03 정의**
+
+<img width="556" height="168" alt="image" src="https://github.com/user-attachments/assets/b699b62b-2738-4312-9793-d542f97f5bbd" />
+
+</br>
+</br>
+
+**2)  ZSSPFLI_B03 정의**
+
+<img width="553" height="226" alt="image" src="https://github.com/user-attachments/assets/ed083fa4-379b-49aa-9de4-9e1b36601205" />
+
+</br>
+</br>
