Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -205,7 +205,7 @@ WRITE:/ 'FIrst Name: ', pa_fname,
 </br>
 
 ### 실습 2
-- 스트럭처 ZSSCARR_B03을 스트럭처 ZSSPFLI_B03 안에 포함시키기
+- Nested Structure 실습 ( 스트럭처 ZSSCARR_B03을 스트럭처 ZSSPFLI_B03 안에 포함시키기 )
 
 **1) ZSSCARR_B03 정의**
 
@@ -223,4 +223,49 @@ WRITE:/ 'FIrst Name: ', pa_fname,
 </br>
 
 ### 실습 3
-- 스트럭처 ZSSCARR_B03을 스트럭처 ZSSPFLI_B03 안에 포함시키기
+- Structure와 INCLUDE 접근 방식 실습
+```abap
+DATA: gs_person TYPE ZPERSON_B03.
+
+gs_person-phone = '010-8952-0763'.
+gs_person-name-fname = 'Kim'.   " 필드 안에 스트럭처
+gs_person-name-lname = 'yewon'.
+gs_person-street = 'Gangnam'.   " .Include 스트럭처
+gs_person-city = 'Seoul'.
+
+WRITE:/ gs_person-phone,
+      / gs_person-name-fname,
+      / gs_person-name-lname,
+      / gs_person-street,
+      / gs_person-city.
+```
+</br>
+</br>
+
+### 실습 4
+- Deep Structure 실습 ( Structure 안에 Table 구조 )
+```abap
+DATA: ls_person TYPE ZPERSON_B03,
+      ls_phone TYPE LINE OF ZPERSON_B03-PHONE.    " table 타입에서 line of 로 생성했으므로 structure 변수
+" DATA: ls_phone TYPE STR_PHONE과 같음
+" DATA: ls_phone LIKE LINE OF ls_phone-PHONE과 같음
+
+ls_person-fname = 'Hong'.
+ls_person-lname = 'Gildong'.
+ls_person-street = 'Gangnam'.
+ls_person-city = 'Seoul'.
+
+ls_phone-p_type = 'TEL'.
+ls_phone-p_number = '010-1234-5678'.
+APPEND ls_phone TO ls_person-phone. " itab에 1건추가
+
+ls_phone-p_type = 'FAX'.
+ls_phone-p_number = '02-214-3456'.
+APPEND ls_phone TO ls_person-phone.
+
+ls_phone-p_type = 'MOB'.
+ls_phone-p_number = '010-9876-5432'.
+APPEND ls_phone TO ls_person-phone.
+
+WRITE: 'OKOK'.
+```
