Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -147,6 +147,21 @@ person-addr-city   = 'Seoul'.
 ```
 </br>
 </br>
+</br>
+</br>
+
+## Line Type으로 설정 가능한 타입 (ABAP Table Type)
+
+| Line Type 종류                | 설명 |
+|-------------------------------|------|
+| **Data Element**              | 단일 필드(스칼라 타입)를 행 구조로 사용 |
+| **Structure (Structure Type)**| 여러 필드로 이루어진 스트럭처를 행 타입으로 사용 |
+| **Transparent Table**         | 투명 테이블의 한 Row 전체 구조를 행 타입으로 사용 |
+| **Database View**             | 데이터베이스 뷰의 Row 구조를 행 타입으로 사용 |
+| **Projection View**           | Projection View에서 노출된 필드 구조를 행 타입으로 사용 |
+
+</br>
+</br>
 
 ---
 
