Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -150,7 +150,7 @@ person-addr-city   = 'Seoul'.
 </br>
 </br>
 
-## Line Type으로 설정 가능한 타입 (ABAP Table Type)
+## < Line Type으로 설정 가능한 타입 (ABAP Table Type) >
 
 | Line Type 종류                | 설명 |
 |-------------------------------|------|
