Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -281,3 +281,27 @@ APPEND ls_phone TO ls_person-phone.
 
 WRITE: 'OKOK'.
 ```
+</br>
+</br>
+
+### 실습 5
+- Deep Structure 실습 ( 다하고 디버깅으로 확인 )
+```abap
+PARAMETERS: pa_carr TYPE S_CARR_ID.
+
+DATA: gs_scar TYPE SCARR,
+      gt_spfli TYPE ZSSCARR_B03-SPFLIINFO.
+
+SELECT SINGLE * FROM SCARR
+  INTO gs_scar
+  WHERE carrid = pa_carr.
+  
+BREAK-POINT.
+  
+SELECT * FROM SPFLI
+  INTO CORRESPONDING FIELDS OF TABLE gt_spfli
+  WHERE carrid = pa_carr.
+  BREAK-POINT.
+  
+BREAK-POINT.
+```
