Update 실습 과제 모음.md

--- a/ABAP 기초/실습 과제 모음.md
+++ b/ABAP 기초/실습 과제 모음.md
@@ -82,7 +82,7 @@ ENDIF.
 </br>
 
 ### 2) 실습 1 - SELECT 활용해서 출력
-- LOOP문 안에 SELECT 쓰기
+- LOOP문 안에 SELECT 쓰기  ( 안됨 !! LOOP 안에는 READ 쓰기 )
 ```abap
 *&---------------------------------------------------------------------*
 *& Report ZBC400_B03_ITAB01
