--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -164,6 +164,36 @@ person-addr-city   = 'Seoul'.
 
 </br>
 
+## < Type Group(타입 그룹) >
+- 여러 TYPES, CONSTANTS, MACRO(DEFINE) 등을 한 묶음으로 모아놓은 그룹
+- 프로그램에서 사용 시 `TYPE-POOL <이름>` 으로 로드
+- 이름은 최대 5자리
+**1) 타입 그룹 정의 형식(DIC에서 작성)**
+- 타입 그룹 안의 객체 이름 형식: `<타입그룹명>_<오브젝트명>`
+```abap
+TYPE-POOL <타입그룹이름>.       "타입 그룹 선언
+
+TYPES: <타입이름> TYPE <자료형>,     "타입 정의
+       ...  
+
+CONSTANTS: <상수이름> TYPE <자료형> VALUE <값>,   "상수 정의
+           ...  
+```
+</br>
+
+**2) Program 에서 사용 형식** 
+```abap
+TYPE-POOL <타입그룹이름>.          "타입 그룹 불러오기
+
+DATA <변수명> TYPE <타입그룹이름>_<타입이름>.   "타입 그룹의 타입 사용
+```
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 ### 실습 1
 - 특정 필드에 대해 중복제거 및 정렬하여 조회하기
