Update 프로그래핑 문법과 로직 (11.27).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -334,3 +334,35 @@ SELECT * FROM SPFLI
   
 BREAK-POINT.
 ```
+</br>
+</br>
+
+### 실습 6
+**1) 타입 그룹 정의 형식(DIC에서 작성)**
+```abap
+TYPE-POOL ZTB03 .
+
+TYPES ztb03_percentage(3) TYPE P DECIMALS 2.
+CONSTANTS ztb03_pi TYPE F VALUE '3.14'.
+```
+</br>
+
+**2) Program 에서 사용 형식** 
+```abap
+TYPE-POOLS: ZTB03, COL, ICON.
+
+DATA: gv_percent TYPE ztb03_percentage.
+
+WRITE:/ 'BACKGROUND' COLOR COL_BACKGROUND,
+      / 'HEADING' COLOR COL_HEADING,
+      / 'NORMAL' COLOR COL_NORMAL,
+      / 'TOTAL' COLOR COL_TOTAL,
+      / 'KEY' COLOR COL_KEY,
+      / 'POSITIVE' COLOR COL_POSITIVE,
+      / 'NEGATIVE' COLOR COL_NEGATIVE,
+      / 'GROUP' COLOR COL_GROUP.
+
+WRITE:/ '5B' AS ICON,
+        '5C' AS ICON,
+        '5D' AS ICON.
+```
