Update 실습 과제 모음.md

--- a/ABAP 기초/실습 과제 모음.md
+++ b/ABAP 기초/실습 과제 모음.md
@@ -157,3 +157,80 @@ ELSE.
   cl_demo_output=>display_data( gt_data ).
 ENDIF.
 ```
+</br>
+</br>
+
+### 3) 실습 1 - SELECT 활용해서 출력
+- LOOP문 안에 SELECT 쓰기 수정한 버전
+```abap
+*&---------------------------------------------------------------------*
+*& Report ZBC400_B03_ITAB01
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+REPORT zbc400_b03_itab01.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE ZSCLB03_DEMO.
+DATA: SEATREMAIN TYPE INT4,
+      SEATREMAIN_B TYPE INT4,
+      SEATREMAIN_F TYPE INT4,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data,
+      gv_carrname TYPE S_CARRNAME,
+      gv_cityfrom TYPE S_FROM_CIT,
+      gv_cityto TYPE S_TO_CITY.
+
+SELECT-OPTIONS: so_con FOR gs_data-CONNID,
+                so_dat FOR gs_data-FLDATE.
+
+IF sy-subrc <> 0.
+  MESSAGE 'Data is not found' TYPE 'E'.
+ENDIF.
+
+*****    2. SFLIGHT Table에서 기본적으로 제공될 Flight List Info를 취득해서 데이터를 보여준다.
+
+SELECT * FROM sflight
+  INTO CORRESPONDING FIELDS OF TABLE gt_data
+  WHERE carrid = pa_car AND connid IN so_con.
+
+*****    3. SCARR Table에서 CARRNAME를 취득해서 데이터를 보여준다.
+
+SELECT SINGLE carrname FROM scarr
+  INTO gv_carrname
+  WHERE carrid = pa_car.
+
+LOOP AT gt_data INTO gs_data.
+  gs_data-carrname = gv_carrname.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+*****    4. SPFLI Table에서 CITYFROM, CITYTO를 취득해서 데이터를 보여준다.
+
+SELECT SINGLE cityfrom cityto FROM spfli
+  INTO (gv_cityfrom, gv_cityto)
+  WHERE carrid = pa_car.
+
+LOOP AT gt_data INTO gs_data.
+  gs_data-cityfrom = gv_cityfrom.
+  gs_data-cityto = gv_cityto.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+*******    5. economy class, business class, first class의 각 남은 좌석을 구한다.
+
+LOOP AT gt_data INTO gs_data.
+  gs_data-SEATREMAIN = gs_data-SEATSMAX - gs_data-SEATSOCC.
+  gs_data-SEATREMAIN_B = gs_data-SEATSMAX_B - gs_data-SEATSOCC_B.
+  gs_data-SEATREMAIN_F = gs_data-SEATSMAX_F - gs_data-SEATSOCC_F.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+IF sy-subrc <> 0.
+  MESSAGE 'Data is not found' TYPE 'E'.
+ELSE.
+  cl_demo_output=>display_data( gt_data ).
+ENDIF.
+```
