--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -273,6 +273,20 @@ ENDIF.
 - Select-options는 Header Line 있는 itab 이므로 APPEND 시 TO 절 생략 가능
 - `APPEND` : 조건을 내부 테이블에 추가
 - `CLEAR` : 헤더라인 초기화 → 다음 조건 입력 준비
+
+| OPTION | 범위 적용 방식 |
+|--------|----------------|
+| EQ     | LOW 값과 같은 값만 선택 (HIGH 사용 안 함) |
+| BT     | LOW~HIGH 범위 값만 선택 |
+| GE     | LOW 이상 값 선택 (HIGH 사용 안 함) |
+| LE     | LOW 이하 값 선택 (HIGH 사용 안 함) |
+| GT     | LOW 초과 값 선택 |
+| LT     | LOW 미만 값 선택 |
+| CP     | 패턴 매칭 (*, ?) |
+| NE     | LOW 값과 다른 값 선택 |
+| NP     | 패턴 불일치 선택 |
+
+
 ```abap
 " 1. SELECT-OPTIONS 선언
 SELECT-OPTIONS: <so_name> FOR <field>.
