Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -280,10 +280,10 @@ ENDIF.
 | BT     | LOW~HIGH 범위 값만 선택 |
 | GE     | LOW 이상 값 선택 (HIGH 사용 안 함) |
 | LE     | LOW 이하 값 선택 (HIGH 사용 안 함) |
-| GT     | LOW 초과 값 선택 |
-| LT     | LOW 미만 값 선택 |
+| GT     | LOW 초과 값 선택 (HIGH 사용 안 함) |
+| LT     | LOW 미만 값 선택 (HIGH 사용 안 함) |
 | CP     | 패턴 매칭 (*, ?) |
-| NE     | LOW 값과 다른 값 선택 |
+| NE     | LOW 값과 다른 값 선택 (HIGH 사용 안 함) |
 | NP     | 패턴 불일치 선택 |
 
 
@@ -400,7 +400,7 @@ INITIALIZATION.
 
   so_con-SIGN = 'E'.
   so_con-OPTION = 'EQ'.
-  so_con-LOW = '0400'.      " 0401, 0402만 조회
+  so_con-LOW = '0400'.      " 0400 제외하고 조회
   APPEND so_con.
   CLEAR so_con.
 
