Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -300,12 +300,11 @@ APPEND <so_name>.                           " 내부 테이블에 적용
 CLEAR <so_name>.                            " 헤더라인 초기화 후 다음 조건 설정
 ```
 ```abap
-REPORT z_example_so_append.
+DATA: gt_flight TYPE TABLE OF sflight,
+      gs_flight TYPE sflight.
 
-DATA: gt_flight TYPE TABLE OF sflight.
-
-" SELECT-OPTIONS 선언
-SELECT-OPTIONS: so_conn FOR sflight-connid.
+" SELECT-OPTIONS 선언 (구조 필드 기준)
+SELECT-OPTIONS: so_conn FOR gs_flight-connid.
 
 INITIALIZATION.
   " 포함 조건: 0400
