Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -270,7 +270,7 @@ ENDIF.
 
 **4) SELECT-OPTIONS + APPEND/CLEAR**
 - SELECT-OPTIONS: 화면에서 범위 조건 입력용, 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
-- `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 **이미 선언된 변수(Work Area 또는 Structure)**의 필드를 통해 참조해야 함
+- `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
 - Select-options는 Header Line 있는 itab 이므로 APPEND 시 TO 절 생략 가능
 - `APPEND` : 조건을 내부 테이블에 추가
 - `CLEAR` : 헤더라인 초기화 → 다음 조건 입력 준비
