Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -275,17 +275,18 @@ ENDIF.
 - `APPEND` : 조건을 내부 테이블에 추가
 - `CLEAR` : 헤더라인 초기화 → 다음 조건 입력 준비
 
-| OPTION | 범위 적용 방식 |
-|--------|----------------|
-| EQ     | LOW 값과 같은 값만 선택 (HIGH 사용 안 함) |
-| BT     | LOW~HIGH 범위 값만 선택 |
-| GE     | LOW 이상 값 선택 (HIGH 사용 안 함) |
-| LE     | LOW 이하 값 선택 (HIGH 사용 안 함) |
-| GT     | LOW 초과 값 선택 (HIGH 사용 안 함) |
-| LT     | LOW 미만 값 선택 (HIGH 사용 안 함) |
-| CP     | 패턴 매칭 (*, ?) |
-| NE     | LOW 값과 다른 값 선택 (HIGH 사용 안 함) |
-| NP     | 패턴 불일치 선택 |
+
+| ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
+| :---: | :--- | :---: | :---: |
+| **`EQ`** | Equal (같음) | `LOW` 값만 사용 | `fieldName = LOW` |
+| **`BT`** | Between (사이) | `LOW`와 `HIGH` 값 모두 사용 | `fieldName BETWEEN LOW AND HIGH` |
+| **`GE`** | Greater or Equal (크거나 같음) | `LOW` 값만 사용 | `fieldName >= LOW` |
+| **`LE`** | Less or Equal (작거나 같음) | `LOW` 값만 사용 | `fieldName <= LOW` |
+| **`GT`** | Greater Than (초과) | `LOW` 값만 사용 | `fieldName > LOW` |
+| **`LT`** | Less Than (미만) | `LOW` 값만 사용 | `fieldName < LOW` |
+| **`CP`** | Contains Pattern (패턴 포함) | `LOW` 값만 사용 (`*`, `?` 등 사용) | `fieldName LIKE LOW` |
+| **`NE`** | Not Equal (같지 않음) | `LOW` 값만 사용 | `fieldName != LOW` (또는 `NOT =`) |
+| **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
 
 
 ```abap
