--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -30,6 +30,7 @@
 - 파라미터
   - `Formal Parameter` : 서브루틴/함수 선언 시 정의되는 변수
   - `Actual Parameter` : 호출 시 전달되는 값
+  - **파라미터에 인터널 테이블을 쓸 수 있지만 `LIKE` 나 `TYPE` 을 이용해 명시해줘야함**
 - 호출 방식
   - `CALL BY VALUE` : 호출 시 값만 복사해서 전달, 호출부 값은 바뀌지 않음.
   - `CALL BY VALUE AND RESULT` : 값 전달 후, 서브루틴에서 수정된 값을 호출부로 반환.
