Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -1,1 +1,20 @@
+< ABAP 개념 >
+### Transparent Table
+- Activate 해야 실제 DB에 동일한 테이블 생성됨 (1:1 매핑).
+- SAP 시스템에서 고유하게 존재(중복 없음).
+- 키 필드 외 나머지 = Non-key(Function) 필드.
+- 테이블의 한 줄 = Record(레코드).
+- 참조 필드
+  - 통화: `CURR` → `CUKY`
+  - 수량: `QUAN` → `UNIT`
+</br>
+</br>
 
+### Structure vs Transparent Table
+
+| 항목             | Structure                | Transparent Table                     |
+|------------------|---------------------------|----------------------------------------|
+| 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
+| 키 필드          | ❌ 없음                   | ✔ 있음                                 |
+| ABAP 변수 선언   | 둘 다 구조(Structure)로 사용 | 둘 다 구조처럼 사용                      |
+| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |
