Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -16,5 +16,5 @@
 |------------------|---------------------------|----------------------------------------|
 | 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
 | 키 필드          | ❌ 없음                   | ✔ 있음                                 |
-| ABAP 변수 선언   | 둘 다 구조(Structure)로 사용 | 둘 다 구조처럼 사용                      |
+| ABAP 변수 선언   | Structure로 사용 (공통점) | Structure로 사용 (공통점)                      |
 | INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |
