Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -12,6 +12,8 @@
 
 ### Structure vs Transparent Table
 
+- **Key 필드 일 때 : Initial Value 허용 반드시 체크 (값 없는 키 필드 생성 시 오류 방지)**
+
 | 항목             | Structure                | Transparent Table                     |
 |------------------|---------------------------|----------------------------------------|
 | 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
