Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -12,7 +12,8 @@
 
 ### Structure vs Transparent Table
 
-- **Key 필드 일 때 : Initial Value 허용 반드시 체크 (값 없는 키 필드 생성 시 오류 방지)**
+- **Key 필드 일 때** : Initial Value 허용 반드시 체크 (값 없는 키 필드 생성 시 오류 방지)
+- 테이블 정의 시 INCLUDE는 Structure만 추가 가능
 
 | 항목             | Structure                | Transparent Table                     |
 |------------------|---------------------------|----------------------------------------|
