Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -1,4 +1,4 @@
-< ABAP 개념 >
+## < ABAP 개념 >
 ### Transparent Table
 - Activate 해야 실제 DB에 동일한 테이블 생성됨 (1:1 매핑).
 - SAP 시스템에서 고유하게 존재(중복 없음).
@@ -20,4 +20,33 @@
 | 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
 | 키 필드          | ❌ 없음                   | ✔ 있음                                 |
 | ABAP 변수 선언   | Structure로 사용 (공통점) | Structure로 사용 (공통점)                      |
-| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |
+| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |'
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+### 실습 1
+- transparent 테이블 안에 .include로 structure 넣기
+**1) `ZEMPLOY03` transparent 테이블**
+
+<img width="520" height="312" alt="image" src="https://github.com/user-attachments/assets/80045875-01bf-48a5-b6ad-a52dfffb262c" />
+
+</br>
+
+**2) `ZDEPMENT03` transparent 테이블**
+
+<img width="518" height="276" alt="image" src="https://github.com/user-attachments/assets/140e1148-47f5-43d7-9c28-d173455fb9b2" />
+
+</br>
+
+**3) `ZCHANGE03` structure**
+
+<img width="520" height="177" alt="image" src="https://github.com/user-attachments/assets/4e11fa30-0ea5-4601-ba22-3b16d58d490c" />
+
+</br>
+</br>
