--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -1,5 +1,5 @@
 ## < ABAP 개념 >
-### Transparent Table
+### < Transparent Table >
 - Activate 해야 실제 DB에 동일한 테이블 생성됨 (1:1 매핑).
 - SAP 시스템에서 고유하게 존재(중복 없음).
 - 키 필드 외 나머지 = Non-key(Function) 필드.
@@ -10,7 +10,7 @@
 </br>
 </br>
 
-### Structure vs Transparent Table
+### < Structure vs Transparent Table >
 
 - **Key 필드 일 때** : Initial Value 허용 반드시 체크 (값 없는 키 필드 생성 시 오류 방지)
 - 테이블 정의 시 INCLUDE는 Structure만 추가 가능
@@ -22,6 +22,14 @@
 | ABAP 변수 선언   | Structure로 사용 (공통점) | Structure로 사용 (공통점)                      |
 | INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |'
 
+</br>
+</br>
+
+### < 테이블 정의 시 Technical Settings >
+- 필수 항목
+  - 1. Data Class
+  - 2. Size Category
+- 옵션 항목
 </br>
 </br>
 
