--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -20,16 +20,34 @@
 | 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
 | 키 필드          | ❌ 없음                   | ✔ 있음                                 |
 | ABAP 변수 선언   | Structure로 사용 (공통점) | Structure로 사용 (공통점)                      |
-| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |'
+| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |
+
+<img width="378" height="368" alt="image" src="https://github.com/user-attachments/assets/aea9a30e-e39f-442d-84c9-9696d18a06ad" />
+
 
 </br>
 </br>
 
 ### < 테이블 정의 시 Technical Settings >
 - 필수 항목
-  - 1. Data Class
-  - 2. Size Category
+  - Data Class
+    - 데이터 저장 공간(테이블스페이스)을 분류하는 기준
+    - 데이터 성격에 따라 관리 영역이 다름
+      - Master Data : 자주 바뀌지 않는 기본 데이터
+      - Organizational Data : 시스템 초기 설정 데이터
+      - Transaction Data : 자주 변경되는 트랜잭션 데이터
+      - System Data : SAP 내부용 데이터
+  - Size Category
+    - 테이블 예상 크기를 분류하는 옵션
+    - 초기 저장 공간(initial extent) 설정 시 활용
 - 옵션 항목
+  - 로깅(Logging)
+    - SE11에서 설정 가능
+    - BC 팀 권한 필요
+    - 실제 데이터가 변경되어야 로그 기록됨
+  - 버퍼링(Buffering)
+    - 메모리에 데이터를 저장해 조회 속도 개선
+    - 버퍼 종류별 특징이 다름 (아래 참고)
 </br>
 </br>
 
