Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -42,6 +42,12 @@
   - Size Category
     - 테이블 예상 크기를 분류하는 옵션
     - 초기 저장 공간(initial extent) 설정 시 활용
+
+   <img width="510" height="350" alt="image" src="https://github.com/user-attachments/assets/fd9d35f3-0905-4a14-a5e1-91c1e6dc8ffc" />
+</br>
+</br>
+
+    
 - 옵션 항목
   - 로깅(Logging)
     - SE11에서 설정 가능
