--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -65,6 +65,20 @@
 </br>
 </br>
 
+### < 버퍼링 종류 >
+**1) Full Buffering**
+- 테이블 전체 데이터를 메모리에 저장
+- 소규모 테이블에 적합
+- 대용량 테이블엔 비효율적
+**2) Generic Buffering**
+- Generic Key 단위로 그룹별 데이터 저장
+- 조건에 맞는 데이터 세트 캐싱
+- 최대 Generic Key 개수 = 기본키 수 - 1
+**3) Single-record Buffering**
+- 한 레코드씩 메모리에 저장
+- 저장 공간 효율적
+- 조회 대상이 적을 때 효과적
+
 </br>
 </br>
 
