Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -56,7 +56,8 @@
     - 실제 데이터가 변경되어야 로그 기록됨
   - 버퍼링(Buffering)
     - 메모리에 데이터를 저장해 조회 속도 개선
-    - 버퍼 종류별 특징이 다름 (아래 참고)
+    - 테이블 변경 발생 시, 버퍼 내용과 DB를 동기화
+    - 변경 이력 기록 후 자동 갱신
    
       <img width="416" height="281" alt="image" src="https://github.com/user-attachments/assets/3adf843b-470a-49e6-98e1-b046b8e23562" />
 
