Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -1,4 +1,20 @@
 ## < ABAP 개념 >
+### < 데이터 조회 & 인덱스 >
+**1) Binary Search**
+- 기본키 기준 SELECT 시 자동 적용
+- 데이터를 반씩 나누며 빠르게 찾는 알고리즘
+
+**2) Secondary Index**
+- 기본키 외 다른 필드 조회 시 사용
+- 빠른 조회 가능
+- DB 옵티마이저가 최적 인덱스 자동 선택
+  
+<img width="466" height="168" alt="image" src="https://github.com/user-attachments/assets/c6878a8f-dcb5-4f9c-9c16-373a9e95bd3d" />
+
+</br>
+</br>
+</br>
+
 ### < Transparent Table >
 - Activate 해야 실제 DB에 동일한 테이블 생성됨 (1:1 매핑).
 - SAP 시스템에서 고유하게 존재(중복 없음).
