Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -46,6 +46,19 @@
 </br>
 </br>
 
+### < 테이블 유형과 관계 >
+**1) Transparent Table**
+- DB 테이블과 1:1 매핑
+- 일반 업무 데이터 저장
+- SAP에서 가장 많이 사용됨
+
+**2) Cluster Table & Pool Table**
+- 여러 논리 테이블을 하나의 물리 테이블에 묶음 (N:1 관계)
+- 데이터 압축, 저장 공간 절약 목적
+- 단점과 제약 많아 요즘은 거의 사용하지 않음 (특히 HANA 환경에서)
+</br>
+</br>
+
 ### < 테이블 정의 시 Technical Settings >
 - 필수 항목
   - Data Class
