Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -97,6 +97,9 @@
 </br>
 
 ### < 버퍼링 종류 >
+
+<img width="477" height="184" alt="image" src="https://github.com/user-attachments/assets/180075f1-94ad-4d98-8b30-c7a5364b4f7b" />
+
 **1) Full Buffering**
 - 테이블 전체 데이터를 메모리에 저장
 - 소규모 테이블에 적합
@@ -143,3 +146,9 @@
 
 </br>
 </br>
+</br>
+</br>
+
+### 실습 2
+- transparent 테이블 안에 .include로 structure 넣기
+  
