--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -152,4 +152,11 @@
 ### 실습 2
 - buffering 설정 실습
 
-  
+**1) `ZTPERSON_B03` transparent 테이블**
+
+<img width="611" height="323" alt="image" src="https://github.com/user-attachments/assets/67aed8d3-4a53-48b8-a0bd-0ef24a9e38cd" />
+</br>
+</br>
+
+**2) buffer 설정**
+<img width="481" height="414" alt="image" src="https://github.com/user-attachments/assets/dcdc7b01-5389-4423-b17d-85ee6eb18196" />
