Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -162,4 +162,9 @@
 **2) buffer 설정**
 
 <img width="399" height="343" alt="image" src="https://github.com/user-attachments/assets/dbcf567f-4e86-4819-9462-d84a76fc926f" />
+</br>
+</br>
 
+**3) allow 설정**
+
+<img width="499" height="184" alt="image" src="https://github.com/user-attachments/assets/61c32745-0799-4abc-85f7-e3942c6e3dea" />
