Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -63,7 +63,7 @@
 
 </br>
 
-### < 테이블 정의 시 Technical Settings >
+## < 테이블 정의 시 Technical Settings >
 **1) 필수 항목**
 - Data Class
   - 데이터 저장 공간(테이블스페이스)을 분류하는 기준
@@ -100,7 +100,7 @@
 </br>
 </br>
 
-### < 버퍼링 종류 >
+### 버퍼링 종류
 
 <img width="477" height="184" alt="image" src="https://github.com/user-attachments/assets/180075f1-94ad-4d98-8b30-c7a5364b4f7b" />
 
@@ -118,6 +118,36 @@
 - 한 레코드씩 메모리에 저장
 - 저장 공간 효율적
 - 조회 대상이 적을 때 효과적
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < Input Check (Validation Check) >
+- 사용자 입력값이 테이블이나 필드에 저장되기 전에 유효성을 검증하는 기능
+- ABAP에서 흔히 Validation Check라고 함
+</br>
+
+### 자동 Input Check 4가지
+
+**1) 필수값 체크 (Required Field Check)**
+- 입력이 반드시 필요한 필드에 값이 들어왔는지 확인
+
+**2) 외래키 체크 (Foreign Key Check)**
+- 참조 테이블에 존재하는 값인지 확인
+- 데이터 무결성 확보
+
+**3) Fixed Value 체크**
+- 특정 필드에 정해진 값만 허용
+- 예: `C`, `Y`, `F` 등
+- 데이터 양이 적어 테이블로 관리하기 애매한 값 관리에 적합
+
+**4) Type 체크 (Data Type Check)**
+- 필드 타입과 맞는 값인지 확인
+- 예: 숫자형, 날짜형, 문자형 등
 
 </br>
 </br>
