Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -131,7 +131,7 @@
 - ABAP에서 흔히 Validation Check라고 함
 </br>
 
-### 자동 Input Check 4가지
+### < 자동 Input Check 4가지 >
 
 **1) 필수값 체크 (Required Field Check)**
 - 입력이 반드시 필요한 필드에 값이 들어왔는지 확인
