Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -157,9 +157,14 @@
 </br>
 
 ## < Fixed Value 설정 방법 >
+**1) Fixed Value 설정하기**
+- Fixed Value(고정값)는 ABAP 딕셔너리에서 오직 도메인 객체에서만 설정
+
+<img width="388" height="253" alt="image" src="https://github.com/user-attachments/assets/004af10c-b934-4d2a-969b-a73854784a82" />
 
 </br>
 </br>
+
 ---
 
 </br>
