--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -163,6 +163,13 @@
 <img width="388" height="253" alt="image" src="https://github.com/user-attachments/assets/004af10c-b934-4d2a-969b-a73854784a82" />
 
 </br>
+
+**2) 테이블에서 필드 지정**
+
+<img width="414" height="217" alt="image" src="https://github.com/user-attachments/assets/3c0e5cbe-0155-47c3-92a2-bdb8be8770f4" />
+
+
+</br>
 </br>
 
 ---
