Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -167,7 +167,11 @@
 **2) 테이블에서 필드 지정**
 
 <img width="414" height="217" alt="image" src="https://github.com/user-attachments/assets/3c0e5cbe-0155-47c3-92a2-bdb8be8770f4" />
+</br>
 
+**3) Utilities -> table contents -> create entries**
+
+<img width="439" height="210" alt="image" src="https://github.com/user-attachments/assets/09b126b8-5099-436c-8df7-519f6418657c" />
 
 </br>
 </br>
