Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -172,7 +172,14 @@
 **3) Utilities -> table contents -> create entries**
 
 <img width="439" height="210" alt="image" src="https://github.com/user-attachments/assets/09b126b8-5099-436c-8df7-519f6418657c" />
+</br>
 
+**4) 값 입력**
+
+<img width="285" height="242" alt="image" src="https://github.com/user-attachments/assets/f7268ba1-0770-4723-86eb-37091ae87dc4" />
+
+</br>
+</br>
 </br>
 </br>
 
