Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -183,8 +183,9 @@
 
 </br>
 </br>
+</br>
 
-### Fixed Value 파라미터로 불러오기
+## < Fixed Value 파라미터로 불러오기 >
 - 도메인에 정의된 Fixed Value만 입력 가능하도록 하는 파라미터 선언
 ```abap
 PARAMETERS <파라미터명> TYPE <데이터요소> VALUE CHECK.
